--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1><a href="index.html">Raihan Rifaldi</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm <span>Informatics Student</span> | Cloud Computing Enthusiastic</h2>
+      <h2>I'm <span>Student</span> | Cloud Computing Enthusiastic</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
